# Proyek-Sistem-Pengolahan-Sinyal-Project-Signal-Processing-System-

./: .gitignore  README.md  verify_sim.py
backend/: Cargo.toml  config.toml
backend/src/: api.rs  arduino.rs  db.rs  file_io.rs  main.rs  settings.rs  sim.rs  state.rs
firmware/enouse_firmware/: enouse_firmware.ino
gui/: BLACK_TEA.csv  BLACK_TEA.json  Kombinasi 1.csv  Kombinasi 1.json  Melati_1_2Motor.csv  Melati_1_2Motor.gp  Melati_1_2motor.json  Melati_2_2Motor.csv  Melati_2_2Motor.gp  Melati_2_2Motor.json  Melati_3_2Motor.csv  Melati_3_2Motor.gp  Melati_3_2Motor.json  TEH_ANGGUR.csv  TEH_ANGGUR.json  TEH_HIJAU.csv  TEH_HIJAU.json  TEH_MELATI.csv  TEH_MELATI.json  Teh_Anggur_1_2Motor.csv  Teh_Anggur_1_2Motor.gp  Teh_Anggur_1_2Motor.json  Teh_Anggur_2_2Motor.csv  Teh_Anggur_2_2Motor.gp  Teh_Anggur_2_2Motor.json  Teh_Anggur_3_2Motor.csv  Teh_Anggur_3_2Motor.gp  Teh_Anggur_3_2Motor.json  Teh_Hijau_1_2Motor.csv  Teh_Hijau_1_2Motor.gp  Teh_Hijau_1_2Motor.json  Teh_Hijau_2_2Motor.csv  Teh_Hijau_2_2Motor.gp  Teh_Hijau_2_2Motor.json  Teh_Hijau_3_2Motor.csv  Teh_Hijau_3_2Motor.gp  Teh_Hijau_3_2Motor.json  Teh_Hitam_1_2Motor.csv  Teh_Hitam_1_2Motor.gp  Teh_Hitam_1_2Motor.json  (+9 more)
