[package]
name = "enouse_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.2"
influxdb2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
csv = "1.3"
env_logger = "0.10"
log = "0.4"
rand = "0.8"
local-ip-address = "0.5"
config = "0.13"
